<?xml version="1.0" encoding="utf-8"?>
<!-- Which items show depends on the queue's status; LiveConsoleActivity toggles them. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/console_action_insights"
        android:title="@string/console_menu_insights" />
    <item
        android:id="@+id/console_action_edit"
        android:title="@string/console_menu_edit" />
    <item
        android:id="@+id/console_action_pause"
        android:title="@string/console_menu_pause" />
    <item
        android:id="@+id/console_action_resume"
        android:title="@string/console_menu_resume" />
    <item
        android:id="@+id/console_action_close"
        android:title="@string/console_menu_close" />
    <item
        android:id="@+id/console_action_reopen"
        android:title="@string/console_menu_reopen" />
</menu>
